<resources>
    <string name="app_name">Split Bus</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_timetables">Timetables</string>
    <string name="nav_information">Information</string>
    <string name="nav_setttings">Settings</string>
    <string name="welcome_first_run_toolbar">Welcome</string>
    <string name="welcome_first_run_title">Thank you for downloading!</string>
    <string name="welcome_first_run_desc">Welcome to all new &lt;b>Split Bus&lt;/b> App!</string>
    <string name="welcome_update_toolbar">App updated</string>
    <string name="welcome_update_title">Split Bus v%1$s</string>
    <string name="welcome_update_desc">Whats all new in the new release</string>
    <string name="favourite_empty_title">Empty favourites!</string>
    <string name="favourite_empty_message">Add desired bus routes to the favourites and they will appear here on the homescreen</string>
    <string name="timetables_area_city">City</string>
    <string name="timetables_area_urban">Urban</string>
    <string name="timetables_area_suburban">Suburban</string>
    <string name="timetables_area_trogir">Trogir</string>
    <string name="timetables_area_solta">Šolta</string>
    <string name="timetables_menu_add_to_favourites">Add to favourites</string>
    <string name="timetables_menu_remove_from_favourites">Remove from favourites</string>
    <string name="timetables_menu_gmaps">Interactive map</string>
    <string name="timetable_detail_work_day">Work day</string>
    <string name="timetable_detail_saturday">Saturday</string>
    <string name="timetable_detail_sunday">Sunday</string>
    <string name="timetable_detail_snackbar_message">You are in offline mode! Data shown was saved at %1$s</string>
    <string name="timetable_detail_snackbar_refresh">Refresh</string>
    <string name="information_news_general_category">News and general info</string>
    <string name="information_news_title">Latest news</string>
    <string name="information_news_desc">Fetch latest traffic news from Promet Split website. Please note these are usually written only in Croatian</string>
    <string name="information_tourist_title">Tourist corner</string>
    <string name="information_tourist_desc">First time in Split, having issues finding your way? No worries, check this section for quick city guide</string>
    <string name="information_news_maps_category">Various maps</string>
    <string name="information_gmaps_title">Interactive map</string>
    <string name="information_gmaps_desc">Displays all bus routes and stops on the interactive Google Maps map inside the app</string>
    <string name="information_urban_map_title">Urban area</string>
    <string name="information_urban_map_desc">All parts of the city are connected by a dense network of bus lines</string>
    <string name="information_suburban_map_title">Suburban area</string>
    <string name="information_suburban_map_desc">Except urban city bus lines at the service of passengers there\'s more than a 30 suburban bus lines</string>
    <string name="information_tariff_zones_title">Tariff zones</string>
    <string name="information_tariff_zones_desc">Bus traffic in the city of Split and the surrounding area has been divided into four tariff zones</string>
    <string name="information_websites_category">Other handy websites</string>
    <string name="information_cycles_title">Nextbike</string>
    <string name="information_cycles_desc">Check locations and availability of public bicycles found across Split</string>
    <string name="information_parking_title">Parking</string>
    <string name="information_parking_desc">Map displaying all public car parking sites</string>
    <string name="information_garage_title">Garage</string>
    <string name="information_garage_desc">Map displaying locations of all public car garages</string>
    <string name="information_promet_web">Promet Split Website</string>
    <string name="information_promet_desc">If Split Bus doesn\'t work please check timetables on the official Promet Split website</string>
    <string name="settings_dark_mode_title">Dark mode</string>
    <string name="settings_dark_mode_desc">Manually control app\'s theme by enabling or disabling dark mode</string>
    <string name="error_still_not_finished">Not finished yet, coming in the next updates!</string>
    <string name="informacije_prometsplit_naslov">Promet Split Web</string>
    <string name="informacije_prometsplit_opis">Ako ne radi aplikacija potražite vozne redove na službenoj Prometovoj Stranici</string>
    <string name="informacije_gmaps_naslov">Interactive map</string>
    <string name="informacije_gmaps_opis">Displays all bus routes and stops on the interactive Google Maps map inside the app</string>
    <string name="informacije_karta_grad_naslov">Urban area</string>
    <string name="informacije_karta_grad_opis">All parts of the city are connected by a dense network of bus lines</string>
    <string name="informacije_karta_prigrad_naslov">Suburban area</string>
    <string name="informacije_karta_prigrad_opis">Except urban city bus lines at the service of passengers there\'s more than a 30 suburban bus lines</string>
    <string name="informacije_tarifne_zone_naslov">Tariff zones</string>
    <string name="informacije_tarifne_zone_opis">Bus traffic in the city of Split and the surrounding area has been divided into four tariff zones</string>
    <string name="informacije_parking_naslov">Parking</string>
    <string name="informacije_parking_opis">Map displaying all public car parking sites</string>
    <string name="informacije_garaze_naslov">Garage</string>
    <string name="informacije_garaze_opis">Map displaying locations of all public car garages</string>
    <string name="nav_favoriti">Favourites</string>
    <string name="nav_grad_split">City buses</string>
    <string name="nav_urbano_podrucje">Urban area</string>
    <string name="nav_prigradske">Suburban area</string>
    <string name="nav_trogir_solta">Trogir and Šolta</string>
    <string name="title_novosti">Latest news</string>
    <string name="title_gmaps">Interactive map</string>
    <string name="title_informacije">Informations</string>
    <string name="action_settings">Settings</string>
    <string name="title_display_bus">Timetable</string>
    <string name="action_kartagrad">City map</string>
    <string name="action_kartaprigrad">Suburban map</string>
    <string name="action_tariffzones">Tariff zones</string>
    <string name="preuzimanje">Downloading &#8230;</string>
    <string name="preuzimanje_opis">Fetching latest data, please hold on!</string>
    <string name="contact">Contact</string>
    <string name="close">Close</string>
    <string name="vozni_red_nema_favorita_naslov">Empty favourites!</string>
    <string name="vozni_red_nema_favorita_opis">Add desired bus routes to the favourites and they will appear here on the homescreen</string>
    <string name="db_setup">Timetables setting up, please wait!</string>
    <string name="db_setup_done">Successful!</string>
    <string name="db_setup_failed">Error occurred, please report on mail!</string>
    <string name="radni_dan">Work day</string>
    <string name="subota">Saturday</string>
    <string name="nedjelja">Sunday</string>
    <string name="action_ruta">Show route</string>
    <string name="snackbar_favorites_add">Timetable added to the favourites!</string>
    <string name="snackbar_favorites_remove">Timetable removed from the favourites!</string>
    <string name="vozni_red_nema_polazaka">\n\n\n\n NO BUSES \n\n\n\n</string>
    <string name="vozni_red_napomena"><b>NOTE:</b></string>
    <string name="vozni_red_tuzni_smiley">;(</string>
    <string name="vozni_red_error_naslov">Unable to get data!</string>
    <string name="vozni_red_error_opis">This might occur if Promet Split made some changes to their website.</string>
    <string name="vozni_red_report_error">Report Error</string>
    <string name="vozni_red_error_promet_web">Promet Web</string>
    <string name="gmaps_menu_main_city_stops">Main city stops</string>
    <string name="gmaps_menu_other_city_stops">Other city stops</string>
    <string name="gmaps_menu_suburban_stops">Suburban stops</string>
    <string name="nijejos">Not finished yet! :(</string>
    <string name="menu_prijava">Report wrong data</string>
    <string name="warningpopup">For ease of viewing outside of city interactive map only shows end bus stations. Also most of suburban bus lines don\'t stop at the urban city bus stations so they\'re not shown on map as well. \n\nSince I cannot find anywhere exact bus routes and station locations there can be some wrong map data. If you notice any please report using \'Report wrong data\' option below. \nThank you for your understanding</string>
    <string name="permission_altert_title">Location Permission Needed</string>
    <string name="permission_altert_message">This app needs the Location permission, please accept to use location functionality</string>
    <string name="gmaps_select_title">Select bus route</string>
    <string name="gmaps_stanica_opcina">OPĆINA - CITY HALL</string>
    <string name="gmaps_stanica_solinska">PROMET BUS STATION - SUKOIŠAN</string>
    <string name="gmaps_stanica_pazar">MARKET - PAZAR</string>
    <string name="gmaps_stanica_tr_luka">FERRY PORT</string>
    <string name="gmaps_stanica_ak_split">SPLIT BUS STATION</string>
    <string name="pref_general">General</string>
    <string name="pref_open_url">Open URLs inside app</string>
    <string name="pref_open_url_summary">URLs open inside app in custom chrome tabs</string>
    <string name="pref_traffic">Traffic</string>
    <string name="pref_traffic_summary">Display traffic info on interactive map</string>
    <string name="pref_gmaps">Map style</string>
    <string name="pref_gmaps_summary">Choose your map style</string>
    <string name="pref_information">Information</string>
    <string name="pref_about">About</string>
    <string name="pref_about_summary">Description, changes, bug reports and other app related information</string>
    <string name="about_app_desc">Split Bus helps out citizens and tourists with the public transport in Split. The app is free, open source, packed with features while maintaining simple easy to use design.
    \n\nApp obtains data directly from Promet d.o.o. website. I cannot be held responsible for their content or availability. </string>
    <string name="about_changelog_title">Changelog</string>
</resources>